src/objects/Buyer_Need2_del__c.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Type__c</fullName>
        <inlineHelpText>What type of acquisitions is this principal looking for?</inlineHelpText>
        <label>Acquisition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Core/Stabilized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-Tenant, Net-Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Add</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Criteria__c</fullName>
        <label>Additional Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Quality__c</fullName>
        <label>Buyer Quality</label>
        <picklist>
            <picklistValues>
                <fullName>1 Will buy within 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Might buy within 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Will not buy within 6 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buyer&apos;s Needs</relationshipLabel>
        <relationshipName>Buyer_s_Needs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Debt__c</fullName>
        <label>Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equity__c</fullName>
        <label>Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Begin_Date__c</fullName>
        <label>Exchange Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Period_Expiration__c</fullName>
        <formula>Exchange_Begin_Date__c + 180</formula>
        <label>Exchange Period Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identification_Period_Expires__c</fullName>
        <formula>Exchange_Begin_Date__c  + 45</formula>
        <label>Identification Period Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AK-Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Huntsville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Montgomery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fayetteville/Springdale/Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fort Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Little Rock/N Little Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-East Bay/Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Marin/Sonoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Salinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Luis Obispo/Paso Robles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Barbara/Sta Maria/Goleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Cruz/Watsonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-South Bay/San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Stockton/Modesto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Visalia/Porterville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Colorado Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-Hartford</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Purchase_Price__c</fullName>
        <label>Maximum Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Square_Footage__c</fullName>
        <label>Maximum Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_CAP_Rate__c</fullName>
        <label>Minimum CAP Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Cash_on_cash__c</fullName>
        <label>Minimum Cash-on-cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_IRR__c</fullName>
        <label>Minimum IRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_LIRR__c</fullName>
        <label>Minimum LIRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Purchase_Price_Actual__c</fullName>
        <label>Minimum Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Purchase_Price__c</fullName>
        <label>Minimum Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Storage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Buyer&apos;s Need</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Core_Buyers</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Contact__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Maximum_Purchase_Price__c</columns>
        <columns>Minimum_Purchase_Price_Actual__c</columns>
        <columns>Minimum_Purchase_Price__c</columns>
        <columns>Minimum_CAP_Rate__c</columns>
        <columns>Minimum_Cash_on_cash__c</columns>
        <columns>Additional_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acquisition_Type__c</field>
            <operation>includes</operation>
            <value>Core/Stabilized</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Core Buyers</label>
    </listViews>
    <listViews>
        <fullName>Distressed_Buyers</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Contact__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Maximum_Purchase_Price__c</columns>
        <columns>Minimum_Purchase_Price_Actual__c</columns>
        <columns>Minimum_Purchase_Price__c</columns>
        <columns>Minimum_CAP_Rate__c</columns>
        <columns>Minimum_Cash_on_cash__c</columns>
        <columns>Additional_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acquisition_Type__c</field>
            <operation>includes</operation>
            <value>Distressed</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Distressed Buyers</label>
    </listViews>
    <listViews>
        <fullName>Value_Add_Buyers</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Contact__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Maximum_Purchase_Price__c</columns>
        <columns>Minimum_Purchase_Price_Actual__c</columns>
        <columns>Minimum_Purchase_Price__c</columns>
        <columns>Minimum_CAP_Rate__c</columns>
        <columns>Minimum_Cash_on_cash__c</columns>
        <columns>Additional_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acquisition_Type__c</field>
            <operation>includes</operation>
            <value>Value Add</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Value Add Buyers</label>
    </listViews>
    <listViews>
        <fullName>X1031_Exchange_Buyers</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Contact__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Maximum_Purchase_Price__c</columns>
        <columns>Minimum_Purchase_Price_Actual__c</columns>
        <columns>Minimum_Purchase_Price__c</columns>
        <columns>Minimum_CAP_Rate__c</columns>
        <columns>Minimum_Cash_on_cash__c</columns>
        <columns>Debt__c</columns>
        <columns>Equity__c</columns>
        <columns>Exchange_Begin_Date__c</columns>
        <columns>Exchange_Period_Expiration__c</columns>
        <columns>Identification_Period_Expires__c</columns>
        <columns>Additional_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Buyer_Need2_del__c.X1031_Exchange</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1031 Exchange Buyers</label>
    </listViews>
    <nameField>
        <label>Buyer Need Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyer&apos;s Needs</pluralLabel>
    <recordTypes>
        <fullName>Acquisition_Criteria</fullName>
        <active>true</active>
        <label>Acquisition Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>X1031_Exchange</fullName>
        <active>true</active>
        <label>1031 Exchange</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>